# quantum-playground

./: .dockerignore  Cargo.toml  Dockerfile  README.md  run-docker.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/basic/: InstructionsSidebar.tsx  TabbedWindows.tsx  index.css
frontend/src/components/circuit-sim/: QuantumCircuitSimulator.tsx
frontend/src/components/circuit-sim/compute/: QuantumCircuitTransformer.tsx
frontend/src/components/circuit-sim/ui/nodes/: QubitNode.tsx
frontend/src/components/circuit-sim/ui/pallete/: Pallete.tsx  index.css
frontend/src/components/qec/: QECSimulator.tsx
frontend/src/components/stabilizer-evolution/: StabilizerEvolutionSimulator.tsx
frontend/src/components/stabilizer-evolution/tableau-input/: TableauInput.tsx  index.css
frontend/src/components/stabilizer-evolution/ui/nodes/: MeasurementNode.tsx  QubitNode.tsx  SingleQubitGateNode.tsx  TwoQubitGateNode.tsx  index.css
frontend/src/components/stabilizer-evolution/ui/pallete/: Pallete.tsx
src/: main.rs
src/circuit/: simulator.rs
