[package]
name = "quantum-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
nalgebra = "0.34.1"
qcomp = { version = "0.1.0", git = "https://github.com/tejbindu/qcomp.git" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
